<resources>
    <string name="app_name">Gossip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_gossip">Add your new Gossip</string>
    <string name="reply">Add your reply</string>
    <string name="posted_by">Posted by: </string>
    <string name="add_your_tag_here">Add your tag here</string>
    <string name="email">Enter your Email(Optional)</string>
    <string name="password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="full_name">Your Full Name</string>
    <string name="contact">Your Contact Number(Optional)</string>
    <string name="back_to_login">Go To Login</string>
    <string name="enter_otp">Enter the OTP sent to your contact number</string>
    <string name="verify">Verify</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="or">Or</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="bio">Tell us about yourself</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="nationality">Nationality(Optional)</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save_info">Save Info</string>
    <string name="add_tag_or_keyword">Add tags or keywords</string>

    <string name="la_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="your_web_client_id">987846523142-d5rtu4ls8qqqiqkgdntd18bos216ffan.apps.googleusercontent.com</string>
    <string name="my_gossip">My Gossip</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="contacts">CONTACTS</string>
    <string name="unknown">Unknown</string>
    <string name="error_loading_data">Error in loding data! Please try again</string>
    <string name="something_went_wrong_gossip_not_added">Something went wrong! Gossip not added</string>
    <string name="hide_tags">Hide Tags</string>
</resources>