<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add.AddGossipFragment">

    <ImageView
        android:id="@+id/attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_baseline_attach_file_24"
        app:layout_constraintTop_toTopOf="@id/add_gossip"
        app:layout_constraintBottom_toBottomOf="@id/add_gossip"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_baseline_send_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_gossip"
        app:layout_constraintBottom_toBottomOf="@id/add_gossip"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_gossip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/add_gossip"
        app:layout_constraintEnd_toStartOf="@id/send"
        app:layout_constraintStart_toEndOf="@id/attachment"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_add_tag"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/add_tag_or_keyword"
        android:textSize="12sp"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/add_gossip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/add_tag_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_your_tag_here"
        android:textSize="15sp"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_gossip"/>

</androidx.constraintlayout.widget.ConstraintLayout>